--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
                     <option value="pricing">pricing</option>
                 </select>
                 <button id="Login">Login</button>
-                <button>Try Whitespace Free</button>
+                <button id="btn1">Try Whitespace Free</button>
             </div>
         <div class="para1">
             <h1 style="margin-bottom: 5%;font-size: bold;">Get More Done With Whitespace</h1>
